--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -12,8 +12,7 @@
 <div class="container">
     <div class="row py-2">
         <div class="col-12">
-            <!-- TODO -->
-            <a class="btn btn-primary" th:href="@{/user/new}">Add User</a>
+            <a th:replace="fragments/new_user.html :: new_user"></a>
         </div>
 
         <div class="col-12 mt-3">
